--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2569,107 +2569,108 @@ stories:
   domain: http://www.kpcnews.com/
   link: https://www.kpcnews.com/lifestyles/entertainment/image_a6f2cd8e-1bba-5964-a9e1-be0412995108.html
 images:
-- name: downtown-old-empty-retail-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-old-empty-retail-leaflets-of-the-russian-revolution.jpg
-- name: server-cloud-server-racks-door-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-cinnamon-rolls.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-copper-circuit.jpg
-- name: berlinwall2-berlinwall-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-spagetti-accident.jpg
-- name: gears-4882162452-fa3126b38d-b-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-soul.jpg
-- name: yosemite-yosemite-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-kandinsky-bv.jpg
-- name: miamibeach-miamibeach-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-oily-mcoilface.jpg
-- name: school-clouds-church-clouds-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-blocks.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-alberto-giacometti.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
-- name: school-clouds-church-clouds-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crafty-painting.jpg
-- name: beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-umberto-bocc.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-umberto-bocc.png
-- name: store-on-corner-store-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-blue-electricity.jpg
-- name: downtown-trucksilo-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crabapple.jpg
-- name: beach-clouds-lifeguard-beachclouds-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kand-two.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
-- name: store-on-corner-oldcabin-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purp-paper.jpg
-- name: blossombar-alien-goggles-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-alien-goggles-file-00-00-50-62.jpg
-- name: crow-crow-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-nazi-poster.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-sand-paper.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-sand-paper.png
-- name: downtheline-downtheline-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-sand-paper.jpg
-- name: old-barn-old-barn-1500-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-paper.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
-- name: window-window-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-green-zuma.jpg
-- name: ellis-island-ellisisland-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-post-modern.jpg
-- name: power-lines-power-lines-empty-space-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dali-three.jpg
-- name: old-granary-field-granaryfield-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-monet-one.jpg
-- name: stories-cargo-ship-on-sea-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-constitution.jpg
-- name: school-clouds-church-clouds-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-dream.jpg
-- name: death-valley-death-valley-national-park-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-spagetti-accident.jpg
-- name: nazi-invasion-P6180010.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-P6180010.jpg
-- name: mosaic-face-mosaic-face-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-bright-sand.jpg
-- name: castle-wall-DSC-0067-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-really-hot.JPG
-- name: school-clouds-church-clouds-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-gred-mash.jpg
-- name: yosemite-yosemite-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-colorful-dream.jpg
-- name: oldhouse-granaryfield-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-really-hot.jpg
-- name: meadowbutterfly-meadow-butterfly-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-atari-missle.jpg
-- name: server-cloud-server-racks-door-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-rainbow-festival.jpg
-- name: christianity-christianity-under-construction-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-ww2-color.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-colored-circuits.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colored-circuits.JPG
-- name: gypsy-wagon-gypsywagon-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-monet-one.jpg
-- name: aws-s3-diamondcreek-diamondcreek-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still.jpg
-- name: abandonedbuildings_purp_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_purp_paper.jpg
-- name: ellis-island-ellis-island-room-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-emily-carr.jpg
-- name: oldsmallboat-oldsmallboat-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-electricity.jpg
-- name: old-school-house-old-schoolhouse-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dark-rain.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
-- name: fence-mexico-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-mucha-mult.jpg
+- name: old-cabin-oldcabin-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-creativity.jpg
+- name: abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
+- name: scream-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7788.jpg
+- name: nyc-flag-nycflag-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colored-circuits.jpg
+- name: carry-load-carryload-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-colorful-blocks.jpg
+- name: razorcliff-razorcliff-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-plentiful.jpg
+- name: ellis-island-ellis-island-room-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-matrix.jpg
+- name: oldhousecars-house-old-cars-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-pablo-blue.jpg
+- name: file-00-00-18-35 2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35
+    2.jpg
+- name: windowmountain-window-mountain-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-asteroids.jpg
+- name: yosemite-yosemite-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crunch-paper.jpg
+- name: nyc-flag-nycflag-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-internet-numbers.jpg
+- name: cargo-ship-cargo-ship-on-sea-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-umberto-bocc.jpg
+- name: white-house-lawn-white-house-window-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-graham-sutherland.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+- name: old-gas-pumps-oldgaspumps-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crabapple.jpg
+- name: amusement-park-amusement-park-2-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-matrix.jpg
+- name: catacombs-catacombs-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-gred-mash.jpg
+- name: capital-battle-capitolbattle-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-sunday.jpg
+- name: razorcliff-razorcliff-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-neo-instinct.jpg
+- name: oldsmallboat-oldsmallboat-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-bright-sand.jpg
+- name: mosaic-face-mosaic-face-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-alberto-giacometti.jpg
+- name: castle-wall-DSC-0067-purple-pond.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purple-pond.JPG
+- name: white-house-lawn-white-house-window-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-kand-two.jpg
+- name: old-door-lock-old-door-lock-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-copper-circuit-2.jpg
+- name: nyc-flag-nycflag-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-wols.jpg
+- name: berlinwall-DSC-0084-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-graham-sutherland.jpg
+- name: miamibeach-miamibeach-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-smoking-cigarette.jpg
+- name: razorwire-DSC-0080-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-aqua.jpg
+- name: crow-crow-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-ww2-dresden.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425.jpg
+- name: legal-statue-legalstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-light-dali.jpg
+- name: catacombs-catacombs-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-soul.jpg
+- name: white-house-lawn-white-house-lawn-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-space-pizza.jpg
+- name: gears-4882162452-fa3126b38d-b-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-rain.jpg
+- name: stories-new-27-93-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--1--1.jpg
+- name: beach-rocks-beach-rocks-currents-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-free-woman.jpg
+- name: bluelake-crafty-painting-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-00-00-00.jpg
+- name: old-door-lock-old-door-lock-2-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-mucha-mult.jpg
+- name: rain-princess-IMG_7954.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7954.jpg
+- name: white-house-lawn-white-house-lawn-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-graham-sutherland.jpg
+- name: server-cloud-server-racks-clouds-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dry-skin.jpg
+- name: aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
+- name: downtown-los-angeles-downtown-la-alien-goggles.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-alien-goggles.JPG
+- name: downtown-trucksilo-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dry-skin.jpg
+- name: razorcliff-razorcliff-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-rain.jpg
+- name: old-church-oldchurch-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-constitution.jpg
+- name: yuma-bank-yuma-bak-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-attack-planes.jpg
+- name: death-valley-death-valley-national-park-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-soul.jpg
+- name: meadowbutterfly-meadow-butterfly-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-smooth-ride.jpg
+- name: crow-crow-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-creativity.jpg
 ---
 Jon Watts Worried He'd Missed Michael Keaton Email.&nbsp;Expo Square Showcases New Equine Livestock Stalls In Super Duty Barn.&nbsp;Kevin Spacey Accuser Drops Lawsuit Against Actor.&nbsp;Kevin Spacey Accuser Drops Lawsuit Against Actor.&nbsp;Wisconsin To Consider Lowering Workers' Comp Insurance Rates.&nbsp;Holocaust Survivor And Forgiveness Advocate, Eva Kor.&nbsp;Marshall Couple To Open Winery.&nbsp;Newer Updated Enterprise Businesses Play Musical Chairs.&nbsp;
